# anarchy-registry

./: .env.example  .gitignore  Cargo.toml  DESIGN.md  README.md  RETROSPECTIVE.md  cookies.txt
.claude/: settings.local.json
migrations/: 0001_init.sql  0002_config_tables.sql
reference/: anarchy-worker.js  hideaway-root-admin.js
src/: atproto.rs  auth.rs  db.rs  error.rs  lib.rs  main.rs  rate_limit.rs  routes.rs  service.rs  theme.rs  validate.rs  wordlist.rs
src/handlers/: admin.rs  mod.rs  public.rs
static/: admin.html
templates/: about.html  admin_login.html  base.html  index.html  manage.html
tests/: integration.rs
