[package]
name = "anarchy-registry"
version = "0.1.0"
edition = "2024"

[dependencies]
# web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "set-header"] }

# database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# templates
askama = "0.12"
askama_axum = "0.4"

# crypto
sha2 = "0.10"
subtle = "2"
argon2 = "0.5"
hmac = "0.12"
hex = "0.4"
rand = "0.8"

# http client (for bsky handle resolution)
reqwest = { version = "0.12", features = ["json"] }

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# time
chrono = { version = "0.4", features = ["serde"] }

# config
dotenvy = "0.15"

# error handling at the top level (anyhow at startup; domain errors use
# the crate's own AppError type)
anyhow = "1"